@@ -1,3 +1,14 @@
+Fri Oct  7 12:17:17 1994  Ian Lance Taylor  <ian@sanguine.cygnus.com>
+
+	* top.c (target_byte_order_auto): New static variable.
+	(set_endian): Mention that ``auto'' is permitted.
+	(set_endian_auto): New static function.
+	(show_endian): Change message based on target_byte_order_auto.
+	(set_endian_from_file): New function.
+	(init_main): Add command ``auto'' to endianlist.
+	* exec.c (exec_file_command): Call set_endian_from_file.
+	* defs.h (set_endian_from_file): Declare.
+
 Thu Oct  6 18:10:41 1994  J.T. Conklin  (jtc@phishhead.cygnus.com)
 
 	* nlm/i386.c (flush_i_cache): New function, does nothing.
